--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,29 @@ html{
 .home{
     border-image: center;
 }
+.home h1{
+    text-align: center;
+    list-style-type: none;
+}
 .destacado-home{
     display: flex;
     flex-direction: row;
     list-style-type: none;
     text-align: left;
     flex-wrap:nowrap;
+    background-color: rgba(230, 230, 230, 0.718);
+    border-radius: 10%;
+}
+.destacado-home img{
+    border-radius: 20%;
+}
+.destacado-home h2{
+    color: #000000;
+    font-weight: bold;
+}
+.destacado-home div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
 }
 .navegacion_home{
     width: 80%;
@@ -28,6 +45,8 @@ html{
     text-align: center;
     font-size: 0;
     justify-content: center;
+    background-color: rgba(242, 241, 241, 0.718);
+    border-radius: 10%;
 }
 .navegacion_home > ul li{
     display: inline-block;
@@ -49,7 +68,7 @@ html{
     border-radius: 2rem;
     color: #790e0e;
 }
-@media(max-width: 1020px){
+@media(max-width: 1080px){
     .navegacion_home li:hover a{
         background: #441f8f6b;
         border-radius: 10rem;
@@ -71,24 +90,71 @@ html{
     overflow:hidden;
     justify-content: left;
 }
+.noticia-1 img{
+    border-radius: 360%;
+}
+.noticia-1 h5{
+    color: #000000;
+    font-weight: bold;
+}
+.noticia-1 div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
+}
 .noticia-2{
     display: flex;
     flex-direction: row;
     overflow: hidden;
     justify-content: right;
 }
+.noticia-2 img{
+    border-radius: 360%;
+}
+.noticia-2 h5{
+    color: #000000;
+    font-weight: bold;
+}
+.noticia-2 div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
+}
 .pag-smartphones{
     display: flex;
     flex-direction: column;
+}
+.smartphones_home h1{
+    border-style:ridge; 
+    text-align: center; 
+    list-style-type: none; 
+    border-radius: 20%; width: 70%;
+    background-color: rgb(255, 255, 255); 
+    border-color:rgba(242, 210, 206, 0.762);
 }
 .smartphones_home > h1 li{
     border-image: center;
     justify-content: center;
     align-items: center;
 }
+.smartphones_home h1 li a{
+    color: black; 
+    text-decoration: none;
+}
 .destacado-smartphones{
     display: flex;
     flex-direction: row;
+    background-color: rgba(230, 230, 230, 0.718); 
+    border-radius: 10%;
+}
+.destacado-smartphones img{
+    border-radius: 20%;
+}
+.destacado-smartphones h2{
+    color: #000000;
+    font-weight: bold;
+}
+.destacado-smartphones div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
 }
 .noticias-smartphones{
     display: flex;
@@ -103,15 +169,48 @@ html{
     flex-direction: row;
     justify-content: left;
 }
+.noticia-1S img{
+    border-radius: 360%;
+}
+.noticia-1S h5{
+    color: #000000;
+    font-weight: bold;
+}
+.noticia-1S div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
+}
 .noticia-2S{
     display: flex;
     flex-direction: row;
     justify-content: right;
 }
+.noticia-2S img{
+    border-radius: 360%;
+}
+.noticia-2S h5{
+    color: #000000;
+    font-weight: bold;
+}
+.noticia-2S div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
+}
 .noticia-3S{
     display: flex;
     flex-direction: row;
     justify-content: left;
+}
+.noticia-3S img{
+    border-radius: 360%;
+}
+.noticia-3S h5{
+    color: #000;
+    font-weight: bold;
+}
+.noticia-3S div{
+    color: rgb(53, 52, 52);
+    font-weight:600;
 }
 .navegacion_smartphones{
     width: 80%;
@@ -122,6 +221,11 @@ html{
     justify-content: space-between;
     text-align: center;
     font-size: 0;
+
+}
+.navegacion_smartphones li{
+    background-color: rgba(242, 241, 241, 0.718); 
+    border-radius: 10%;
 }
 .navegacion_smartphones > ul li {
     display: inline-block;
@@ -141,15 +245,28 @@ html{
     border-radius: 2rem;
     color: #ab0808;
 }
-@media(max-width: 540px){
+@media(max-width: 910px){
     .navegacion_smartphones li:hover a{
         background: #4f728d54;
         border-radius: 10rem;
         color: #5909a9;
     }
 }
+.vehiculos_home h1{
+    border-style:ridge; 
+    text-align: center; 
+    list-style-type: none; 
+    border-radius: 20%; 
+    width: 70%; 
+    background-color: rgb(255, 255, 255); 
+    border-color:rgba(242, 210, 206, 0.762);
+}
 .vehiculos_home > h1 li{
     border-image: center;
+    text-decoration: none;
+}
+.vehiculos_home h1 li a{
+    color: black; 
     text-decoration: none;
 }
 .navegacion_vehiculos{
@@ -161,6 +278,10 @@ html{
     text-align: center;
     font-size: 0;
     justify-content: space-between;
+}
+.navegacion_vehiculos li{
+    background-color: rgba(242, 241, 241, 0.718); 
+    border-radius: 10%;
 }
 .navegacion_vehiculos > ul li {
     display: inline-block;
@@ -180,7 +301,7 @@ html{
     border-radius: 2rem;
     color: #6f0f0f;
 }
-@media(max-width: 540px){
+@media(max-width: 910px){
     .navegacion_vehiculos li:hover a{
         background: #4f728d54;
         border-radius: 10rem;
@@ -190,6 +311,16 @@ html{
 .destacado-vehiculos{
     display: flex;
     flex-direction: row;
+    background-color: rgba(230, 230, 230, 0.718); 
+    border-radius: 10%;
+}
+.destacado-vehiculos h2{
+    color: black;
+    font-weight: bold;
+}
+.destacado-vehiculos div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
 }
 .noticias-vehiculos{
     display: flex;
@@ -204,28 +335,87 @@ html{
     flex-direction: row;
     justify-content: left;
 }
+.noticia-1V img{
+    border-radius: 360%;
+}
+.noticia-1V h5{
+    color: #000;
+    font-weight: bold;
+}
+.noticia-1V div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
+}
 .noticia-2V{
     display: flex;
     flex-direction: row;
     justify-content: right;
+}
+.noticia-2V img{
+    border-radius: 360%;
+}
+.noticia-2V h5{
+    color: #000;
+    font-weight: bold;
+}
+.noticia-2V div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
 }
 .noticia-3V{
     display: flex;
     flex-direction: row;
     justify-content: left;
 }
+.noticia-3V img{
+    border-radius: 360%;
+}
+.noticia-3V h5{
+    color: #000;
+    font-weight: bold;
+}
+.noticia-3V div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
+}
 .pag-computacion{
     display: flex;
     flex-direction: column;
+}
+.computacion_home h1{
+    border-style:ridge; 
+    text-align: center; 
+    list-style-type: none; 
+    border-radius: 20%; 
+    width: 70%; 
+    background-color: rgb(255, 255, 255); 
+    border-color:rgba(242, 210, 206, 0.762);
 }
 .computacion_home > h1 li{
     border-image: center;
     justify-content: center;
     align-items: center;
 }
+.computacion_home h1 li a{
+    color: black; 
+    text-decoration: none;
+}
 .destacado-computacion{
     display: flex;
     flex-direction: row;
+    background-color: rgba(230, 230, 230, 0.718); 
+    border-radius: 10%;
+}
+.destacado-computacion img{
+    border-radius: 20%;
+}
+.destacado-computacion h2{
+    color: #000;
+    font-weight: bold;
+}
+.destacado-computacion div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
 }
 .noticias-computacion{
     display: flex;
@@ -240,15 +430,48 @@ html{
     flex-direction: row;
     justify-content: left;
 }
+.noticia-1C img{
+    border-radius: 360%;
+}
+.noticia-1C h5{
+    color: #000;
+    font-weight: bold;
+}
+.noticia-1C div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
+}
 .noticia-2C{
     display: flex;
     flex-direction: row;
     justify-content: right;
 }
+.noticia-2C img{
+    border-radius: 360%;
+}
+.noticia-2C h5{
+    color: #000;
+    font-weight: bold;
+}
+.noticia-2C div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
+}
 .noticia-3C{
     display: flex;
     flex-direction: row;
     justify-content: left;
+}
+.noticia-3C img{
+    border-radius: 360%;
+}
+.noticia-3C h5{
+    color: #000;
+    font-weight: bold;
+}
+.noticia-3C div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
 }
 .navegacion_computacion{
     width: 80%;
@@ -258,7 +481,12 @@ html{
     list-style-type: none;
     text-align: center;
     font-size: 0;
-    justify-content: space-between;
+    gap: 4;
+    justify-content: space-evenly;
+}
+.navegacion_computacion li{
+    background-color: rgba(242, 241, 241, 0.718); 
+    border-radius: 10%;
 }
 .navegacion_computacion > ul li {
     display: inline-block;
@@ -266,7 +494,6 @@ html{
     position: relative;
     background: #e1a4a4;
 }
-
 .navegacion_computacion li a {
     display: block;
     text-decoration: none;
@@ -274,27 +501,49 @@ html{
     line-height: 2.5rem;
     color: #090909;
 }
-
 .navegacion_computacion li:hover a {
     background: #7b7b7b90;
     border-radius: 2rem;
     color: #ab0808;
 }
-@media(max-width: 540px){
+@media(max-width: 910px){
     .navegacion_computacion li:hover a{
         background: #4f728d54;
         border-radius: 10rem;
         color: #5909a9;
     }
 }
+.social_home h1{
+    border-style:ridge; 
+    text-align: center; 
+    list-style-type: none; 
+    border-radius: 20%; 
+    width: 70%; 
+    background-color: rgb(255, 255, 255); 
+    border-color:rgba(242, 210, 206, 0.762);
+}
 .social_home > h1 li{
     border-image: center;
     justify-content: center;
     align-items: center;
 }
+.social_home h1 li a{
+    color: black; 
+    text-decoration: none;
+}
 .destacado-redes{
     display: flex;
     flex-direction: row;
+    background-color: rgba(230, 230, 230, 0.718); 
+    border-radius: 10%;
+}
+.destacado-redes h2{
+    color: #000;
+    font-weight: bold;
+}
+.destacado-redes div{
+    color: rgb(53, 52, 52);
+    font-weight: 600;
 }
 .visita-redes div{
     display: grid;
@@ -315,17 +564,26 @@ html{
     justify-content: left;
     grid-area: red-1;
 }
+.red-1 img{
+    border-radius: 360%;
+}
 .red-2{
     display: flex;
     flex-direction: row;
     justify-content: right;
     grid-area: red-2;
 }
+.red-2 img{
+    border-radius: 360%;
+}
 .red-3{
     display: flex;
     flex-direction: row;
     justify-content: left;
     grid-area: red-3;
+}
+.red-3 img{
+    border-radius: 360%;
 }
 .pie-pagina{
     display: flex;
