--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ html{
     flex-wrap:nowrap;
     background-color: rgba(230, 230, 230, 0.718);
     border-radius: 10%;
+    justify-content: space-between;
 }
 .destacado-home img{
     border-radius: 20%;
@@ -68,20 +69,12 @@ html{
     border-radius: 2rem;
     color: #790e0e;
 }
-@media(max-width: 1080px){
-    .navegacion_home li:hover a{
-        background: #441f8f6b;
-        border-radius: 10rem;
-        color: #5909a9;
-    }
-}
 .noticias-home{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     border-radius: 5%;
     justify-content: space-between;
-    align-items: center;
     box-shadow: 2px 2px 2px 2px gray;
 }
 .noticia-1{
@@ -117,6 +110,87 @@ html{
 .noticia-2 div{
     color: rgb(53, 52, 52);
     font-weight: 600;
+}
+@media (max-width: 767px){ /*formato teléfono*/
+    .destacado-home{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .noticias-home{
+        display: flex;
+        flex-direction: column;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .noticia-1{
+        display: flex;
+        flex-direction: column;
+        border-width: 5%;
+    }
+    .noticia-1 img{
+        background-position: center;
+    }
+    .noticia-2{
+        display: flex;
+        flex-direction: column-reverse;
+        border-width: 5%;
+    }
+    .navegacion_home li:hover a{
+        background: #004d566b;
+        margin: 5px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 5rem;
+        color: #098ea9;
+        padding-bottom:1%;
+        flex-basis: 15%;
+    }
+}
+@media (min-width: 768px) and (max-width: 990px){ /*formato tablet*/
+    .destacado-home{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .noticias-home{
+        display: flex;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .noticia-1{
+        display: flex;
+        border-width: 5%;
+    }
+    .noticia-2{
+        display: flex;
+        border-width: 5%;
+    }
+    .navegacion_home li:hover a{
+        background: #441f8f6b;
+        margin: 10px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 7rem;
+        color: #5909a9;
+        padding-bottom:2.5%;
+        flex-basis: 40%;
+    }
+}
+@media (min-width: 991px){ /*formato escritorio*/
+    .navegacion_home li:hover a{
+        margin: 15px;
+        background-position: center;
+        background-size:auto;
+        border-radius: 10rem;
+        flex-basis: 100%;
+    }
 }
 .pag-smartphones{
     display: flex;
@@ -245,11 +319,91 @@ html{
     border-radius: 2rem;
     color: #ab0808;
 }
-@media(max-width: 910px){
+@media (max-width: 767px){ /*formato teléfono*/
+    .destacado-smartphones{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .noticias-smartphones{
+        display: flex;
+        flex-direction: column;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .noticia-1S{
+        display: flex;
+        flex-direction: column;
+        border-width: 5%;
+    }
+    .noticia-2S{
+        display: flex;
+        flex-direction: column-reverse;
+        border-width: 5%;
+    }
+    .noticia-3S{
+        display: flex;
+        flex-direction: column;
+        border-width: 5%;
+    }
     .navegacion_smartphones li:hover a{
-        background: #4f728d54;
-        border-radius: 10rem;
+        background: #004d566b;
+        margin: 5px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 5rem;
+        color: #098ea9;
+        padding-bottom:1%;
+        flex-basis: 15%;
+    }
+}
+@media (min-width: 768px) and (max-width: 990px){ /*formato tablet*/
+    .destacado-smartphones{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .noticias-smartphones{
+        display: flex;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .noticia-1S{
+        display: flex;
+        border-width: 5%;
+    }
+    .noticia-2S{
+        display: flex;
+        border-width: 5%;
+    }
+    .noticia-3S{
+        display: flex;
+        border-width: 5%;
+    }
+    .navegacion_smartphones li:hover a{
+        background: #441f8f6b;
+        margin: 10px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 7rem;
         color: #5909a9;
+        padding-bottom:2.5%;
+        flex-basis: 40%;
+    }
+}
+@media (min-width: 991px){ /*formato escritorio*/
+    .navegacion_smartphones li:hover a{
+        margin: 15px;
+        background-position: center;
+        background-size:auto;
+        border-radius: 10rem;
+        flex-basis: 100%;
     }
 }
 .vehiculos_home h1{
@@ -300,13 +454,6 @@ html{
     background: #636363;
     border-radius: 2rem;
     color: #6f0f0f;
-}
-@media(max-width: 910px){
-    .navegacion_vehiculos li:hover a{
-        background: #4f728d54;
-        border-radius: 10rem;
-        color: #5909a9;
-    }
 }
 .destacado-vehiculos{
     display: flex;
@@ -377,6 +524,93 @@ html{
 .noticia-3V div{
     color: rgb(53, 52, 52);
     font-weight: 600;
+}
+@media (max-width: 767px){ /*formato teléfono*/
+    .destacado-vehiculos{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .noticias-vehiculos{
+        display: flex;
+        flex-direction: column;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .noticia-1V{
+        display: flex;
+        flex-direction: column;
+        border-width: 5%;
+    }
+    .noticia-2V{
+        display: flex;
+        flex-direction: column-reverse;
+        border-width: 5%;
+    }
+    .noticia-3V{
+        display: flex;
+        flex-direction: column;
+        border-width: 5%;
+    }
+    .navegacion_vehiculos li:hover a{
+        background: #004d566b;
+        margin: 5px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 5rem;
+        color: #098ea9;
+        padding-bottom:1%;
+        flex-basis: 15%;
+    }
+}
+@media (min-width: 768px) and (max-width: 990px){ /*formato tablet*/
+    .destacado-vehiculos{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .noticias-vehiculos{
+        display: flex;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .noticia-1V{
+        display: flex;
+        border-width: 5%;
+    }
+    .noticia-2V{
+        display: flex;
+        border-width: 5%;
+    }
+    .noticia-3V{
+        display: flex;
+        border-width: 5%;
+    }
+    .navegacion_vehiculos li:hover a{
+        background: #441f8f6b;
+        margin: 10px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 7rem;
+        color: #5909a9;
+        padding-bottom:2.5%;
+        flex-basis: 40%;
+    }
+}
+@media (min-width: 991px){ /*formato escritorio*/
+    .navegacion_vehiculos li:hover a{
+        margin: 15px;
+        background-position: center;
+        background-size:auto;
+        border-radius: 10rem;
+        flex-basis: 100%;
+    }
 }
 .pag-computacion{
     display: flex;
@@ -506,11 +740,91 @@ html{
     border-radius: 2rem;
     color: #ab0808;
 }
-@media(max-width: 910px){
+@media (max-width: 767px){ /*formato teléfono*/
+    .destacado-computacion{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .noticias-computacion{
+        display: flex;
+        flex-direction: column;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .noticia-1C{
+        display: flex;
+        flex-direction: column;
+        border-width: 5%;
+    }
+    .noticia-2C{
+        display: flex;
+        flex-direction: column-reverse;
+        border-width: 5%;
+    }
+    .noticia-3C{
+        display: flex;
+        flex-direction: column;
+        border-width: 5%;
+    }
     .navegacion_computacion li:hover a{
-        background: #4f728d54;
-        border-radius: 10rem;
+        background: #004d566b;
+        margin: 5px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 5rem;
+        color: #098ea9;
+        padding-bottom:1%;
+        flex-basis: 15%;
+    }
+}
+@media (min-width: 768px) and (max-width: 990px){ /*formato tablet*/
+    .destacado-computacion{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .noticias-computacion{
+        display: flex;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .noticia-1C{
+        display: flex;
+        border-width: 5%;
+    }
+    .noticia-2C{
+        display: flex;
+        border-width: 5%;
+    }
+    .noticia-3C{
+        display: flex;
+        border-width: 5%;
+    }
+    .navegacion_computacion li:hover a{
+        background: #441f8f6b;
+        margin: 10px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 7rem;
         color: #5909a9;
+        padding-bottom:2.5%;
+        flex-basis: 40%;
+    }
+}
+@media (min-width: 991px){ /*formato escritorio*/
+    .navegacion_computacion li:hover a{
+        margin: 15px;
+        background-position: center;
+        background-size:auto;
+        border-radius: 10rem;
+        flex-basis: 100%;
     }
 }
 .social_home h1{
@@ -530,6 +844,39 @@ html{
 .social_home h1 li a{
     color: black; 
     text-decoration: none;
+}
+.navegacion_redes{
+    width: 80%;
+    margin: 1rem;
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    text-align: center;
+    font-size: 0;
+    gap: 4;
+    justify-content: space-evenly;
+}
+.navegacion_redes li{
+    background-color: rgba(242, 241, 241, 0.718); 
+    border-radius: 10%;
+}
+.navegacion_redes > ul li {
+    display: inline-block;
+    width: 20%;
+    position: relative;
+    background: #e1a4a4;
+}
+.navegacion_redes li a {
+    display: block;
+    text-decoration: none;
+    font-size: 1.8rem;
+    line-height: 2.5rem;
+    color: #090909;
+}
+.navegacion_redes li:hover a {
+    background: #7b7b7b90;
+    border-radius: 2rem;
+    color: #ab0808;
 }
 .destacado-redes{
     display: flex;
@@ -584,6 +931,67 @@ html{
 }
 .red-3 img{
     border-radius: 360%;
+}
+@media (max-width: 767px){ /*formato teléfono*/
+    .destacado-redes{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .visita-redes{
+        display: flex;
+        flex-direction: column;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .navegacion_redes li:hover a{
+        background: #004d566b;
+        margin: 5px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 5rem;
+        color: #098ea9;
+        padding-bottom:1%;
+        flex-basis: 15%;
+    }
+}
+@media (min-width: 768px) and (max-width: 990px){ /*formato tablet*/
+    .destacado-redes{
+        display: flex;
+        flex-direction: column;
+        background-size: cover;
+        margin: 5%;
+        border-width: 5%;
+    }
+    .visita-redes{
+        display: flex;
+        flex-direction: column;
+        margin: 5px;
+        border-width: 5%;
+        align-items: center;
+    }
+    .navegacion_redes li:hover a{
+        background: #441f8f6b;
+        margin: 10px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 7rem;
+        color: #5909a9;
+        padding-bottom:2.5%;
+        flex-basis: 40%;
+    }
+}
+@media (min-width: 991px){ /*formato escritorio*/
+    .navegacion_redes li:hover a{
+        margin: 15px;
+        background-position: center;
+        background-size:auto;
+        border-radius: 10rem;
+        flex-basis: 100%;
+    }
 }
 .pie-pagina{
     display: flex;
