--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -137,110 +137,122 @@
     }
 }
 
-.vehiculos_home h1{
-    border-style:ridge; 
-    text-align: center; 
-    list-style-type: none; 
-    border-radius: 20%; 
-    width: 70%; 
-    background-color: rgb(255, 255, 255); 
-    border-color:rgba(242, 210, 206, 0.762);
-}
-.vehiculos_home > h1 li{
-    border-image: center;
-    text-decoration: none;
-}
-.vehiculos_home h1 li a{
-    color: black; 
-    text-decoration: none;
-}
-.navegacion_vehiculos{
-    width: 80%;
-    margin: 2rem;
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    text-align: center;
-    font-size: 0;
-    justify-content: space-between;
-}
-.navegacion_vehiculos li{
-    background-color: rgba(242, 241, 241, 0.718); 
-    border-radius: 10%;
-}
-.navegacion_vehiculos > ul li {
-    display: inline-block;
-    width: 20%;
-    position: relative;
-    background: #e1a4a4;
-}
-.navegacion_vehiculos li a {
-    display: block;
-    text-decoration: none;
-    font-size: 1.8rem;
-    line-height: 2.5rem;
-    color: #000000;
-}
-.navegacion_vehiculos li:hover a {
-    background: #636363;
-    border-radius: 2rem;
-    color: #6f0f0f;
+.vehiculos_home{ 
+    h1{
+        border-style:ridge; 
+        text-align: center; 
+        list-style-type: none; 
+        border-radius: 20%; 
+        width: 70%; 
+        background-color: rgb(255, 255, 255); 
+        border-color:rgba(242, 210, 206, 0.762);
+        li{
+            border-image: center;
+            text-decoration: none;
+            a{
+                color: black; 
+                text-decoration: none;
+            }
+        }
+    }
+    nav{
+        .navegacion_vehiculos{
+            width: 80%;
+            margin: 2rem;
+            display: flex;
+            flex-direction: row;
+            list-style-type: none;
+            text-align: center;
+            font-size: 0;
+            justify-content: space-between;
+            li{
+                background-color: rgba(242, 241, 241, 0.718); 
+                border-radius: 10%;
+                a {
+                    display: block;
+                    text-decoration: none;
+                    font-size: 1.8rem;
+                    line-height: 2.5rem;
+                    color: #090909;
+                }
+                &:hover{
+                    a{
+                        background: #7b7b7b90;
+                        border-radius: 2rem;
+                        color: #ab0808;
+                    }
+                }
+            }
+            ul{
+                li{
+                    display: inline-block;
+                    width: 20%;
+                    position: relative;
+                    background: #e1a4a4;
+                }
+            }
+        }
+    }
 }
 
-.pag-computacion{
-    display: flex;
-    flex-direction: column;
-}
-.computacion_home h1{
-    border-style:ridge; 
-    text-align: center; 
-    list-style-type: none; 
-    border-radius: 20%; 
-    width: 70%; 
-    background-color: rgb(255, 255, 255); 
-    border-color:rgba(242, 210, 206, 0.762);
-}
-.computacion_home > h1 li{
-    border-image: center;
-    justify-content: center;
-    align-items: center;
-}
-.computacion_home h1 li a{
-    color: black; 
-    text-decoration: none;
-}
-.navegacion_computacion{
-    width: 80%;
-    margin: 1rem;
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    text-align: center;
-    font-size: 0;
-    gap: 4;
-    justify-content: space-evenly;
-}
-.navegacion_computacion li{
-    background-color: rgba(242, 241, 241, 0.718); 
-    border-radius: 10%;
-}
-.navegacion_computacion > ul li {
-    display: inline-block;
-    width: 20%;
-    position: relative;
-    background: #e1a4a4;
-}
-.navegacion_computacion li a {
-    display: block;
-    text-decoration: none;
-    font-size: 1.8rem;
-    line-height: 2.5rem;
-    color: #090909;
-}
-.navegacion_computacion li:hover a {
-    background: #7b7b7b90;
-    border-radius: 2rem;
-    color: #ab0808;
+.computacion_home{ 
+    h1{
+        border-style:ridge; 
+        text-align: center; 
+        list-style-type: none; 
+        border-radius: 20%; 
+        width: 70%; 
+        background-color: rgb(255, 255, 255); 
+        border-color:rgba(242, 210, 206, 0.762);
+        li{
+            border-image: center;
+            justify-content: center;
+            align-items: center;
+            a{
+                color: black; 
+                text-decoration: none;
+            }
+        }
+    }
+    nav{
+        .navegacion_computacion{
+            width: 80%;
+            margin: 1rem;
+            display: flex;
+            flex-direction: row;
+            list-style-type: none;
+            text-align: center;
+            font-size: 0;
+            gap: 4;
+            justify-content: space-evenly;
+            li{
+                background-color: rgba(242, 241, 241, 0.718); 
+                border-radius: 10%;
+                a {
+                    display: block;
+                    text-decoration: none;
+                    font-size: 1.8rem;
+                    line-height: 2.5rem;
+                    color: #090909;
+                }
+                &:hover{
+                    a{
+                        background: #7b7b7b90;
+                        border-radius: 2rem;
+                        color: #ab0808;
+                    }
+                }
+            }
+            ul{
+                li{
+                    display: inline-block;
+                    width: 20%;
+                    position: relative;
+                    background: #e1a4a4;
+                }
+            }
+        }
+    }
 }
 
 .social_home{
