--- a/scss/style.scss
+++ b/scss/style.scss
@@ -158,21 +158,21 @@ html{
         margin: 5px;
         border-width: 5%;
         align-items: center;
-    }
-    .noticia-1S{
-        display: flex;
-        flex-direction: column;
-        border-width: 5%;
-    }
-    .noticia-2S{
-        display: flex;
-        flex-direction: column-reverse;
-        border-width: 5%;
-    }
-    .noticia-3S{
-        display: flex;
-        flex-direction: column;
-        border-width: 5%;
+        .noticia-1S{
+            display: flex;
+            flex-direction: column;
+            border-width: 5%;
+        }
+        .noticia-2S{
+            display: flex;
+            flex-direction: column-reverse;
+            border-width: 5%;
+        }
+        .noticia-3S{
+            display: flex;
+            flex-direction: column;
+            border-width: 5%;
+        }
     }
 }
 @media (min-width: 768px) and (max-width: 990px){ /*formato tablet*/
@@ -243,6 +243,26 @@ html{
 }
 
 @media (max-width: 767px){ /*formato teléfono*/
+    .vehiculos_home{
+        nav{
+            .navegacion_vehiculos{
+                li{
+                    &:hover{
+                        a{
+                            background: #004d566b;
+                            margin: 5px;
+                            background-position: center;
+                            background-size: cover;
+                            border-radius: 5rem;
+                            color: #098ea9;
+                            padding-bottom:1%;
+                            flex-basis: 15%;
+                        }
+                    }
+                }
+            }
+        }
+    }
     .destacado-vehiculos{
         display: flex;
         flex-direction: column;
@@ -256,34 +276,44 @@ html{
         margin: 5px;
         border-width: 5%;
         align-items: center;
-    }
-    .noticia-1V{
-        display: flex;
-        flex-direction: column;
-        border-width: 5%;
-    }
-    .noticia-2V{
-        display: flex;
-        flex-direction: column-reverse;
-        border-width: 5%;
-    }
-    .noticia-3V{
-        display: flex;
-        flex-direction: column;
-        border-width: 5%;
-    }
-    .navegacion_vehiculos li:hover a{
-        background: #004d566b;
-        margin: 5px;
-        background-position: center;
-        background-size: cover;
-        border-radius: 5rem;
-        color: #098ea9;
-        padding-bottom:1%;
-        flex-basis: 15%;
+        .noticia-1V{
+            display: flex;
+            flex-direction: column;
+            border-width: 5%;
+        }
+        .noticia-2V{
+            display: flex;
+            flex-direction: column-reverse;
+            border-width: 5%;
+        }
+        .noticia-3V{
+            display: flex;
+            flex-direction: column;
+            border-width: 5%;
+        }
     }
 }
 @media (min-width: 768px) and (max-width: 990px){ /*formato tablet*/
+    .vehiculos_home{
+        nav{
+            .navegacion_vehiculos{
+                li{
+                    &:hover{
+                        a{
+                            background: #441f8f6b;
+                            margin: 10px;
+                            background-position: center;
+                            background-size: cover;
+                            border-radius: 7rem;
+                            color: #5909a9;
+                            padding-bottom:2.5%;
+                            flex-basis: 40%;
+                        }
+                    }
+                }
+            }
+        }
+    }
     .destacado-vehiculos{
         display: flex;
         flex-direction: column;
@@ -293,44 +323,68 @@ html{
     }
     .noticias-vehiculos{
         display: flex;
+        flex-direction: column;
         margin: 5px;
         border-width: 5%;
         align-items: center;
-    }
-    .noticia-1V{
-        display: flex;
-        border-width: 5%;
-    }
-    .noticia-2V{
-        display: flex;
-        border-width: 5%;
-    }
-    .noticia-3V{
-        display: flex;
-        border-width: 5%;
-    }
-    .navegacion_vehiculos li:hover a{
-        background: #441f8f6b;
-        margin: 10px;
-        background-position: center;
-        background-size: cover;
-        border-radius: 7rem;
-        color: #5909a9;
-        padding-bottom:2.5%;
-        flex-basis: 40%;
+        .noticia-1V{
+            display: flex;
+            flex-direction: column;
+            border-width: 5%;
+        }
+        .noticia-2V{
+            display: flex;
+            flex-direction: column-reverse;
+            border-width: 5%;
+        }
+        .noticia-3V{
+            display: flex;
+            flex-direction: column;
+            border-width: 5%;
+        }
     }
 }
 @media (min-width: 991px){ /*formato escritorio*/
-    .navegacion_vehiculos li:hover a{
-        margin: 15px;
-        background-position: center;
-        background-size:auto;
-        border-radius: 10rem;
-        flex-basis: 100%;
+    .vehiculos_home{
+        nav{
+            .navegacion_vehiculos{
+                li{
+                    &:hover{
+                        a{
+                            margin: 15px;
+                            background-position: center;
+                            background-size:auto;
+                            border-radius: 10rem;
+                            flex-basis: 100%;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
 @media (max-width: 767px){ /*formato teléfono*/
+    .computacion_home{
+        nav{
+            .navegacion_computacion{
+                li{
+                    &:hover{
+                        a{
+                            background: #004d566b;
+                            margin: 5px;
+                            background-position: center;
+                            background-size: cover;
+                            border-radius: 5rem;
+                            color: #098ea9;
+                            padding-bottom:1%;
+                            flex-basis: 15%;
+                        }
+                    }
+                }
+            }
+        }
+    }
     .destacado-computacion{
         display: flex;
         flex-direction: column;
@@ -344,34 +398,44 @@ html{
         margin: 5px;
         border-width: 5%;
         align-items: center;
-    }
-    .noticia-1C{
-        display: flex;
-        flex-direction: column;
-        border-width: 5%;
-    }
-    .noticia-2C{
-        display: flex;
-        flex-direction: column-reverse;
-        border-width: 5%;
-    }
-    .noticia-3C{
-        display: flex;
-        flex-direction: column;
-        border-width: 5%;
-    }
-    .navegacion_computacion li:hover a{
-        background: #004d566b;
-        margin: 5px;
-        background-position: center;
-        background-size: cover;
-        border-radius: 5rem;
-        color: #098ea9;
-        padding-bottom:1%;
-        flex-basis: 15%;
+        .noticia-1C{
+            display: flex;
+            flex-direction: column;
+            border-width: 5%;
+        }
+        .noticia-2C{
+            display: flex;
+            flex-direction: column-reverse;
+            border-width: 5%;
+        }
+        .noticia-3C{
+            display: flex;
+            flex-direction: column;
+            border-width: 5%;
+        }
     }
 }
 @media (min-width: 768px) and (max-width: 990px){ /*formato tablet*/
+    .computacion_home{
+        nav{
+            .navegacion_computacion{
+                li{
+                    &:hover{
+                        a{
+                            background: #441f8f6b;
+                            margin: 10px;
+                            background-position: center;
+                            background-size: cover;
+                            border-radius: 7rem;
+                            color: #5909a9;
+                            padding-bottom:2.5%;
+                            flex-basis: 40%;
+                        }
+                    }
+                }
+            }
+        }
+    }
     .destacado-computacion{
         display: flex;
         flex-direction: column;
@@ -384,37 +448,37 @@ html{
         margin: 5px;
         border-width: 5%;
         align-items: center;
-    }
-    .noticia-1C{
-        display: flex;
-        border-width: 5%;
-    }
-    .noticia-2C{
-        display: flex;
-        border-width: 5%;
-    }
-    .noticia-3C{
-        display: flex;
-        border-width: 5%;
-    }
-    .navegacion_computacion li:hover a{
-        background: #441f8f6b;
-        margin: 10px;
-        background-position: center;
-        background-size: cover;
-        border-radius: 7rem;
-        color: #5909a9;
-        padding-bottom:2.5%;
-        flex-basis: 40%;
+        .noticia-1C{
+            display: flex;
+            border-width: 5%;
+        }
+        .noticia-2C{
+            display: flex;
+            border-width: 5%;
+        }
+        .noticia-3C{
+            display: flex;
+            border-width: 5%;
+        }
     }
 }
 @media (min-width: 991px){ /*formato escritorio*/
-    .navegacion_computacion li:hover a{
-        margin: 15px;
-        background-position: center;
-        background-size:auto;
-        border-radius: 10rem;
-        flex-basis: 100%;
+    .computacion_home{
+        nav{
+            .navegacion_computacion{
+                li{
+                    &:hover{
+                        a{
+                            margin: 15px;
+                            background-position: center;
+                            background-size:auto;
+                            border-radius: 10rem;
+                            flex-basis: 100%;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
